--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello world
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+<style>
+	body {
+		font-family: Ubuntu, "times new roman", times, roman, serif;
+	}
+	img { max-width: 400px; }
+</style>
+<p>restricted area</p>
+<img src="assets/eric.jpg"/>
