--- a/vortex.html
+++ b/vortex.html
@@ -4,8 +4,12 @@
 <meta name="author" content="Jack Campbell" />
 <meta name="description" content="Vortex Engine"/>
 <title>Vortex Engine</title>
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
-	img { width: 400px; }
+	body {
+		font-family: Ubuntu, "times new roman", times, roman, serif;
+	}
+	img { max-width: 400px; }
 </style>
 </head>
 <body>
