--- a/codeed.html
+++ b/codeed.html
@@ -4,11 +4,16 @@
 <meta name="author" content="Jack Campbell" />
 <meta name="description" content="Code Ed"/>
 <title>CodeEd</title>
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
-	img { width: 400px; }
+	body {
+		font-family: Ubuntu, "times new roman", times, roman, serif;
+	}
+	img { max-width: 400px; }
 </style>
 </head>
 <body>
+<h1 id="codeed">CodeEd</h1>
 <p>It is an IDE I designed for developing applications and units in C/C++, Python and Javascript environments.</p>
 <ul>
 <li>Low resource consumption and simple to use.</li>
