--- a/codeed.html
+++ b/codeed.html
@@ -6,8 +6,8 @@
 <title>CodeEd</title>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
-	body {
-		font-family: Ubuntu, "times new roman", times, roman, serif;
+	* {
+		font-family: Ubuntu;
 	}
 	img { max-width: 400px; }
 </style>
