--- a/codeed.html
+++ b/codeed.html
@@ -4,10 +4,10 @@
 <meta name="author" content="Jack Campbell" />
 <meta name="description" content="Code Ed"/>
 <title>CodeEd</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
 	* {
-		font-family: Ubuntu;
+		font-family: Ubuntu, "times new roman", times, roman, serif;
 	}
 	img { max-width: 400px; }
 </style>
