--- a/eeg.html
+++ b/eeg.html
@@ -4,7 +4,7 @@
 <meta name="author" content="Jack Campbell" />
 <meta name="description" content="EEG Monitor"/>
 <title>EEG Monitor</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
 	* {
 		font-family: Ubuntu, "times new roman", times, roman, serif;
