--- a/vortex.html
+++ b/vortex.html
@@ -4,7 +4,7 @@
 <meta name="author" content="Jack Campbell" />
 <meta name="description" content="Vortex Engine"/>
 <title>Vortex Engine</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 <style>
 	body {
 		font-family: Ubuntu, "times new roman", times, roman, serif;
