fixed video and font

--- a/eeg.html
+++ b/eeg.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h1 id="eeg-monitor">EEG Monitor</h1>
-<p>Together with <a href="http://ibrahimerkutlu.com/Default.aspx">Prof. Dr. İbrahim Erkutlu</a>, I worked on medical signal processing, transport and EEG monitoring. It was filtered with certain frequencies during the monitorization.</p>
+<p>Together with <a href="http://ibrahimerkutlu.com/Default.aspx">Prof. Dr. İbrahim Erkutlu</a>, I worked on medical signal processing, transport and EEG monitoring. It was filtered with certain frequencies during the monitorization. It supports EDF, EDF+, BDF and BDF+ formats.</p>
 <blockquote>
 <p>Gaziantep University, Neurosurgery</p>
 </blockquote>
