--- a/vegadrone.html
+++ b/vegadrone.html
@@ -19,6 +19,6 @@
 <p>Gaziantep University, Aviation Club</p>
 </blockquote>
 <p>Finding the red note and autopilot.
-<img src="assets/vega.mov" alt="Test"></p>
+<video src="assets/vega.mov" alt="Test"></p>
 </body>
 </html>
