--- a/vegadrone.html
+++ b/vegadrone.html
@@ -19,6 +19,6 @@
 <p>Gaziantep University, Aviation Club</p>
 </blockquote>
 <p>Finding the red note and autopilot.
-<p><img src="assets/vega-1.png" alt="VegaDrone"></p>
+<p><img src="assets/vega-1.jpg" alt="VegaDrone"></p>
 </body>
 </html>
